[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colorthief"
version = "1.0"
description = ' A Python module for grabbing the color palette from an image.'
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Montel Edwards", email = "m@monteledwards.com" },
  { name = "Shipeng Feng" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/monty-dev/colorthief#readme"
Issues = "https://github.com/monty-dev/colorthief/issues"
Source = "https://github.com/monty-dev/colorthief"


[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["mypy>=1.0.0"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["hatch-mypyc", "types-Pillow"]
opt_level = "3"

[tool.hatch.build]
include = ["colorthief.py"]
