[project]
authors = [
    { name = "Montel Edwards", email = "m@monteledwards.com" },
    { name = "Shipeng Feng" },
]

dependencies    = ['Pillow']
description     = ' A Python module for grabbing the color palette from an image.'
keywords        = []
license         = "MIT"
name            = "colorthief"
readme          = "README.rst"
requires-python = ">=3.10"
version         = "2.1"


[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[project.urls]
Documentation = "https://github.com/monty-dev/colorthief#readme"
Issues        = "https://github.com/monty-dev/colorthief/issues"
Source        = "https://github.com/monty-dev/colorthief"


[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["hatch-mypyc", "types-Pillow", 'Pillow']
opt_level    = "3"

[tool.hatch.build]
include = ["colorthief.py"]

[tool.hatch.envs.lint]
dependencies = ["mypy>=1.0.0"]
detached     = true

[tool.black]
line-length    = 160
target-version = ["py310"]
